@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gnubg.c,v 1.574 2004/07/19 07:55:56 thyssen Exp $
+ * $Id: gnubg.c,v 1.575 2004/07/25 20:46:41 kaoru Exp $
  */
 
 #include "config.h"
@@ -4821,18 +4821,34 @@ CommandLoadPython( char * sz ) {
   }
 
   pch = PathSearch( sz, NULL );
-  pf = fopen( pch, "r" );
-  if (!pf)
-  {  /* Couldn't find file, have a look in the scripts dir */
+  pf = pch ? fopen( pch, "r" ) : NULL;
+  if( !pf ) {
+    /* Couldn't find file, have a look in the scripts dir */
     char scriptDir[BIG_PATH];
-    strcpy(scriptDir, (szDataDirectory && *szDataDirectory) ? szDataDirectory: ".");
-    strcat(scriptDir, "/scripts");
-    pch = PathSearch( sz, scriptDir);
-    pf = fopen( pch, "r" );
+    scriptDir[0] = 0;
+    pch = 0;
+    
+    if( szDataDirectory && *szDataDirectory ) {
+      strcpy(scriptDir, szDataDirectory);
+      strcat(scriptDir, "/scripts");
+      pch = PathSearch(sz, scriptDir);
+      pf = fopen( pch, "r" );
+      if( ! pf ) {
+	pch = 0;
+      }
+    }
+    /* Look in scripts/file, same as met */
+    if( ! pch ) {
+      strcpy(scriptDir, "scripts/");
+      strcat(scriptDir, sz);
+      pch = PathSearch(scriptDir, 0);
+      if( pch ) {
+	pf = fopen( pch, "r" );
+      }
+    }
   }
 
-  if (pf)
-  {
+  if( pf ) {
     PyRun_AnyFile( pf, pch );
     fclose( pf );
   }
